--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "express": "^4.16.3",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.16",
-        "nodemon": "^1.18.4"
+        "nodemon": "^1.18.4",
+        "validator": "^10.8.0"
     },
     "devDependencies": {
         "babel-eslint": "^9.0.0",
