--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "bcrypt": "^3.0.1",
         "body-parser": "^1.18.3",
+        "commander": "^2.18.0",
         "express": "^4.16.3",
+        "inquirer": "^6.2.0",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.16",
         "nodemon": "^1.18.4",
