--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "start": "nodemon --exec babel-node app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -11,17 +12,27 @@
     "dependencies": {
         "bcrypt": "^3.0.1",
         "body-parser": "^1.18.3",
+        "chai": "^4.2.0",
         "commander": "^2.18.0",
         "express": "^4.16.3",
         "inquirer": "^6.2.0",
         "jsonwebtoken": "^8.3.0",
+        "mocha": "^5.2.0",
         "mongoose": "^5.2.16",
         "nodemon": "^1.18.4",
         "validator": "^10.8.0"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
         "babel-eslint": "^9.0.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-3": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "chai-http": "^4.2.0",
+        "coveralls": "^3.0.2",
         "eslint": "^5.6.0",
-        "prettier-eslint": "^8.8.2"
+        "prettier-eslint": "^8.8.2",
+        "sinon": "^6.3.4"
     }
 }
